--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Intro a Git</title>
 </head>
 <body>
-    <h1>Título del sitio</h1>
+    <h1>Aprendiendo GIT</h1>
+    <h2>Comision 23000</h2>
 
 </body>
 </html>
