Agregado imagen y cambios index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Aprendiendo GIT</h1>
     <h2>Comision 23000</h2>
-
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, excepturi.</p>
 </body>
 </html>
