Agregando cambios por Juan Codo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Aprendiendo GIT</h1>
     <h2>Comision 23048</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, excepturi.</p>
+    <h3>Subtitulo</h3>
 </body>
 </html>
