Agregado por Juan NA

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1>Aprendiendo GIT</h1>
     <h2>Comision 23048</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, excepturi.</p>
-    <h3>Subtitulo</h3>
+    <h3>Nombre del subtitulo</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, ullam?</p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
