--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h3>Nombre del subtitulo</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, ullam?</p>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Paso 1</li>
+        <li>Paso 2</li>
+        <li>Paso 3</li>
     </ul>
 </body>
 </html>
