--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex, excepturi.</p>
     <h3>Nombre del subtitulo</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, ullam?</p>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+    <ul> 
+        <li>Paso 1</li>
+        <li>Paso 2</li>
+        <li>Paso 45</li>
     </ul>
 </body>
 </html>
