Cambios en ramados y conflicto

--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,8 @@
     <form action="">
         <label for="">Hola</label>
         <input type="text">
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Borrar">
     </form>
 </body>
 </html>
